fix pom.xml