@@ -19,6 +19,7 @@
         <maven.compiler.release>25</maven.compiler.release>
         <paper.api.version>[26.2.build,)</paper.api.version>
         <velocity.api.version>3.5.0-SNAPSHOT</velocity.api.version>
+        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
     </properties>
 
     <dependencies>
